--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,12 +1,21 @@
 body {
   background-color: lightblue !important; }
 
+.container {
+  display: flex;
+  padding: 10px;
+  flex-direction: row; }
+  .container .column {
+    width: 100%;
+    background-color: #efefef;
+    padding: 10px;
+    height: 100vh; }
+
 .card {
-  padding: 20px;
+  padding: 10px;
   background-color: white;
   box-shadow: 0 2px 15px 5px lightgrey;
-  margin: auto;
-  width: 50%;
+  margin: 10px;
   display: flex;
   flex-direction: column; }
   .card .title {
@@ -15,3 +24,6 @@ body {
 
 .pointer {
   cursor: pointer; }
+
+.inner {
+  padding: 10px; }
