--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,12 +2,24 @@ body {
   background-color: lightblue !important;
 }
 
+.container {
+  display: flex;
+  padding: 10px;
+  flex-direction: row;
+
+  .column {
+    width: 100%;
+    background-color: #efefef;
+    padding: 10px;
+    height: 100vh;
+  }
+}
+
 .card {
-  padding: 20px;
+  padding: 10px;
   background-color: white;
   box-shadow: 0 2px 15px 5px lightgrey;
-  margin: auto;
-  width: 50%;
+  margin: 10px;
   display: flex;
   flex-direction: column;
 
@@ -19,4 +31,8 @@ body {
 
 .pointer {
   cursor: pointer;
+}
+
+.inner {
+  padding: 10px;
 }
